--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,21 @@
  Virtual Machine Manager News
  ============================
 
+Release 0.6.1 (January 26th, 2009)
+----------------------------------
+
+This release includes:
+
+  - VM disk and network stats reporting (Guido Gunther)
+  - VM Migration support (Shigeki Sakamoto)
+  - Support for adding sound devices to an existing VM
+  - Enumerate host devices attached to an existing VM
+  - Allow specifying a device model when adding a network device to an
+      existing VM
+  - Combine the serial console view with the VM Details window
+  - Allow connection to multiple VM serial consoles
+  - Bug fixes and many minor improvements.
+
 Release 0.6.0 (September 10th, 2008)
 ------------------------------------
 
