--- a/AUTHORS
+++ b/AUTHORS
@@ -51,6 +51,7 @@ Further patches have been submitted by:
   James Ralston <ralston-at-pobox-dot-com>
   Radek Hladik <radek-at-eadresa-dot-cz>
   Michael Marineau (marineam-at-gentoo-dot-org)
+  Vitaly Mayatskikh <vmayatsk-at-redhat-dot-com>
 
   <...send a patch & get your name here...>
 
