--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,19 @@
  Virtual Machine Manager News
  ============================
 
+Release 0.7.0 (March 9th, 2009)
+-------------------------------
+
+This release includes:
+
+  - Redesigned 'New Virtual Machine' wizard (Jeremy Perry, Tim Allen,
+                                             Cole Robinson)
+  - Option to remove storage when deleting a virtual machine.
+  - File browser for libvirt storage pools and volumes, for use when
+        attaching storage to a new or existing guest.
+  - Physical device assignment (PCI, USB) for existing virtual machines.
+  - Bug fixes and minor improvements.
+
 Release 0.6.1 (January 26th, 2009)
 ----------------------------------
 
