Use MB instead of GB for pretty memory < 10GB. (Gerrit Slomma)

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,6 +12,7 @@ The user interaction / interface design and artwork is
 done by:
 
    Máirín Duffy <duffy-at-redhat-dot-com>
+   Jeremy Perry <jeperry-at-redhat-dot-com>
 
 Further patches have been submitted by:
 
@@ -52,6 +53,7 @@ Further patches have been submitted by:
   Radek Hladik <radek-at-eadresa-dot-cz>
   Michael Marineau (marineam-at-gentoo-dot-org)
   Vitaly Mayatskikh <vmayatsk-at-redhat-dot-com>
+  Gerrit Slomma <roadrunner_gs-at-web-dot-de>
 
   <...send a patch & get your name here...>
 
