Close connection if 'tick' hits an error (e.g. libvirt crashes). (Dan Walsh)

--- a/AUTHORS
+++ b/AUTHORS
@@ -54,6 +54,7 @@ Further patches have been submitted by:
   Michael Marineau (marineam-at-gentoo-dot-org)
   Vitaly Mayatskikh <vmayatsk-at-redhat-dot-com>
   Gerrit Slomma <roadrunner_gs-at-web-dot-de>
+  Dan Walsh <dwalsh-at-redhat-dot-com>
 
   <...send a patch & get your name here...>
 
