Add Guido to AUTHORS.

--- a/AUTHORS
+++ b/AUTHORS
@@ -47,6 +47,7 @@ Further patches have been submitted by:
   S. Çağlar Onur <caglar-at-pardus-dot-org-dot-tr>
   Claes Strom <cs-at-clabbe-dot-com>
   Mike MacCana <mmaccana-at-au1-dot-ibm-dot-com>
+  Guido Günther <agx-at-sigxcpu-dot-org>
   Andrew Gillies <anaru-at-main-dot-com>
   Richard Laager <rlaager-at-wiktel-dot-com>
   James Ralston <ralston-at-pobox-dot-com>
