Force gettext init for glade files (Emmanuel Lacour)

--- a/AUTHORS
+++ b/AUTHORS
@@ -56,6 +56,7 @@ Further patches have been submitted by:
   Vitaly Mayatskikh <vmayatsk-at-redhat-dot-com>
   Gerrit Slomma <roadrunner_gs-at-web-dot-de>
   Dan Walsh <dwalsh-at-redhat-dot-com>
+  Emmanuel Lacour <elacour-at-home-dn-dot-net>
 
   <...send a patch & get your name here...>
 
